syntax = "proto3";

package proto;

option go_package = "github.com/clintjedwards/gofer/proto";

enum EventType {
  UNKNOWN_EVENT_TYPE = 0;
  CREATED_NAMESPACE = 1;

  DISABLED_PIPELINE = 5;
  ENABLED_PIPELINE = 6;
  CREATED_PIPELINE = 7;
  ABANDONED_PIPELINE = 8;

  STARTED_RUN = 10;
  COMPLETED_RUN = 11;

  STARTED_TASK_RUN = 15;
  SCHEDULED_TASK_RUN = 16;
  COMPLETED_TASK_RUN = 17;

  FIRED_TRIGGER = 20;
  PROCESSED_TRIGGER = 21;
  RESOLVED_TRIGGER = 22;
}

message TriggerResult {
  enum State {
    UNKNOWN = 0;
    FAILURE = 1;
    SUCCESS = 2;
    SKIPPED = 3;
  }
  State state = 1;
  string details = 2;
}

message Metadata {
  int64 event_id = 1;
  EventType kind = 2;
  int64 emitted = 3;
}

message EventCreatedNamespace {
  Metadata metadata = 1;
  string namespace_id = 2;
}

message EventDisabledPipeline {
  Metadata metadata = 1;
  string namespace_id = 2;
  string pipeline_id = 3;
}

message EventEnabledPipeline {
  Metadata metadata = 1;
  string namespace_id = 2;
  string pipeline_id = 3;
}

message EventCreatedPipeline {
  Metadata metadata = 1;
  string namespace_id = 2;
  string pipeline_id = 3;
}

message EventAbandonedPipeline {
  Metadata metadata = 1;
  string namespace_id = 2;
  string pipeline_id = 3;
}

message EventStartedRun {
  Metadata metadata = 1;
  string namespace_id = 2;
  string pipeline_id = 3;
  int64 run_id = 4;
}

message EventCompletedRun {
  Metadata metadata = 1;
  string namespace_id = 2;
  string pipeline_id = 3;
  int64 run_id = 4;
  enum State {
    UNKNOWN = 0;
    PROCESSING = 1;
    WAITING = 2;
    RUNNING = 3;
    FAILED = 4;
    SUCCESS = 5;
    CANCELLED = 6;
  }
  State state = 5;
}

message EventStartedTaskRun {
    Metadata metadata = 1;
    string namespace_id = 2;
    string pipeline_id = 3;
    int64 run_id = 4;
    string task_run_id = 5;
  }

message EventScheduledTaskRun {
    Metadata metadata = 1;
    string namespace_id = 2;
    string pipeline_id = 3;
    int64 run_id = 4;
    string task_run_id = 5;
}

  message EventCompletedTaskRun {
    Metadata metadata = 1;
    string namespace_id = 2;
    string pipeline_id = 3;
    int64 run_id = 4;
    string task_run_id = 5;
    enum State {
        UNKNOWN = 0;
        PROCESSING = 1;
        WAITING = 2;
        RUNNING = 3;
        FAILED = 4;
        SUCCESS = 5;
        CANCELLED = 6;
        SKIPPED = 7;
      }
      State state = 6;
  }

message EventFiredTrigger {
  Metadata metadata = 1;
  string label = 2;
  string pipeline = 3;
  string namespace = 4;
  TriggerResult result = 5;
  map<string, string> trigger_metadata = 6;
}

message EventProcessedTrigger {
  Metadata metadata = 1;
  string label = 2;
  string pipeline = 3;
  string namespace = 4;
  TriggerResult result = 5;
  map<string, string> trigger_metadata = 6;
}

message EventResolvedTrigger {
  Metadata metadata = 1;
  string label = 2;
  string pipeline = 3;
  string namespace = 4;
  TriggerResult result = 5;
  map<string, string> trigger_metadata = 6;
}
